<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="none">
        <item android:id="@+id/nav_home"
            android:title="@string/nav_home"
            android:icon="@drawable/ic_menu"/>
        <item android:id="@+id/nav_cart"
            android:title="@string/nav_cart"
            android:icon="@drawable/ic_cart"/>
        <item android:id="@+id/nav_orders"
            android:title="@string/nav_orders"
            android:icon="@drawable/ic_orders"/>
        <item android:id="@+id/nav_change_acount"
            android:title="@string/nav_change_acount"
            android:icon="@drawable/ic_baseline_account_circle_24"/>
        <item android:id="@+id/nav_change_password"
            android:title="@string/nav_change_password"
            android:icon="@drawable/ic_lock"/>
        <item android:id="@+id/nav_log_out"
            android:title="@string/nav_log_out"
            android:icon="@drawable/ic_log_out"/>

    </group>
</menu>